--- a/templates/calendari.html
+++ b/templates/calendari.html
@@ -5,20 +5,21 @@
 	<title>Document</title>
 	<style>
 	table{
-		/*
-		border: solid 1px black;
-		*/
-	}
+			}
 	
-	tr{/*
+	td{
 		border: solid 1px black;
-		background-color: silver;
-		*/
+		
 	}
 
 	td.horitzontal{
-		border-bottom: solid 1px black;
+		border-bottom: solid 1px red;
 	}
+
+	td.vertical{
+		border-left: solid 1px red;
+	}
+
 	li, ul{
 		list-style: none;
 
@@ -34,6 +35,8 @@
 				{% for j in range(1,10) %}
 					{% if (i is divisibleby 3) and i != 9 %}
 						<td class= 'horitzontal' >{{i}}{{j}}</td>
+					{% elif(j is divisibleby 3) and i != 9 %}
+						<td class= 'vertical' >{{i}}{{j}}</td>
 					{% else %}
 						<td>{{i}}{{j}}</td>
 					{% endif %}
